--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,127 @@
-.App {
-  text-align: center;
+body {
+  background-color: white;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.signup-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#signup {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 350px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.red {
+  color: red;
+}
+.profile {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100vh;
+  justify-content: flex-start;
+  width: 100vw;
+}
+.header {
+  width: 100%;
+  display: flex;
+  background-color: black;
   color: white;
+  justify-content:space-evenly;
+  align-items: center;
+  padding: 10px;
+}
+.a {
+  text-decoration: none;
+  color: aliceblue;
+}
+.fixed {
+  width: 100%;
+  position: fixed;
+}
+.chat-form {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  box-sizing: border-box;
+  left: 0;
+  right: 0;
+  height: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.message-input {
+  flex-grow: 1;
+  border: 2;
+  height: 50px;
+  width: 70%;
+  font-size: larger;
+  font-weight: bold;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.image-button {
+  height: 50px;
+  width: 15%;
+  border: 0;
+  background-color: rgb(32, 0, 128);
+  color: aliceblue;
+}
+.message-button {
+  height: 50px;
+  width: 15%;
+  border: 0;
+  background-color: teal;
+  color: aliceblue;
+}
+.center {
+  text-align: center;
+}
+#messages {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 150px;
+  padding-top: 100px;
+}
+.message {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 10px;
+}
+.message2 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width: 100%;
+  padding: 10px;
+}
+.sender {
+  padding: 10px;
+  background-color: blue;
+  color: aliceblue;
+  border-radius: 20px;
+  border-bottom-right-radius: 0%;
+  max-width: 350px;
+  font-size: 14px;
+}
+.receiver {
+  padding: 10px;
+  background-color: slateblue;
+  color: aliceblue;
+  border-radius: 20px;
+  border-bottom-left-radius: 0%;
+  max-width: 350px;
+  font-size: 14px;
+}
+.avatar {
+  width: 45px;
+  height: 45px;
+}
+.user-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
