--- a/src/App.css
+++ b/src/App.css
@@ -51,28 +51,44 @@ body {
   left: 0;
   right: 0;
   height: auto;
+  display: flex;
+  flex-direction: row;
+  border: 1px solid gray;
 }
 
 .message-input {
   flex-grow: 1;
   border: 2;
-  height: 50px;
-  width: 70%;
+  height: 100px;
+  width: 65%;
   font-size: larger;
   font-weight: bold;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
+  font-size:xx-large;
+
 }
 .image-button {
   height: 50px;
-  width: 15%;
+  width: 10%;
   border: 0;
   background-color: rgb(32, 0, 128);
   color: aliceblue;
 }
 .message-button {
   height: 50px;
-  width: 15%;
+  width: 10%;
   border: 0;
   background-color: teal;
+  color: aliceblue;
+}
+.language {
+  height: 50px;
+  width: 15%;
+  border: 0;
+  background-color: rgb(162, 20, 25);
   color: aliceblue;
 }
 .center {
@@ -99,12 +115,13 @@ body {
 }
 .sender {
   padding: 10px;
-  background-color: blue;
-  color: aliceblue;
+  background-color: rgb(230, 230, 240);
+  color: black;
   border-radius: 20px;
   border-bottom-right-radius: 0%;
   max-width: 350px;
-  font-size: 14px;
+  font-size: 35px;
+  font-weight: bold;
 }
 .receiver {
   padding: 10px;
@@ -113,7 +130,8 @@ body {
   border-radius: 20px;
   border-bottom-left-radius: 0%;
   max-width: 350px;
-  font-size: 14px;
+  font-size: 35px;
+  font-weight: bold;
 }
 .avatar {
   width: 45px;
@@ -124,4 +142,13 @@ body {
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-end;
+}
+.option {
+  background-color: antiquewhite;
+  text-decoration:none;
+}
+.option:hover {
+  color: blueviolet;
+  background-color: turquoise;
+  color: aliceblue;
 }
